--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,19 @@
 body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
-    min-height: 100vh;
-    background-color: #ec1717;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: radial-gradient(ellipse at center, #000010 0%, #000000 100%);
+  height: 100vh;
+  width: 100vw;
 }
 
 #particles-js {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    z-index: 2; /* Now particles are in front of .content */
-    pointer-events: none; /* Allows clicking through particles */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
-.content {
-    position: relative;
-    z-index: 1;
-    color: #000000;
-    text-align: center;
-    margin-top: 100px;
+canvas {
+  filter: blur(0.5px);
 }
