--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1607,7 +1607,8 @@ button,
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 0 0 2em -3em;
-  width: calc(100% + 3em); }
+  /*width: calc(100% + 3em); */
+}
   .features article {
     -moz-align-items: center;
     -webkit-align-items: center;
@@ -1619,7 +1620,8 @@ button,
     display: flex;
     margin: 0 0 3em 3em;
     position: relative;
-    width: calc(50% - 3em); }
+    /*width: calc(50% - 3em); */
+  }
     .features article:nth-child(2n - 1) {
       margin-right: 1.5em; }
     .features article:nth-child(2n) {
